--- a/.github/workflows/update-films.yml
+++ b/.github/workflows/update-films.yml
@@ -8,7 +8,6 @@ on:
 jobs:
   update-films:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout dépôt
         uses: actions/checkout@v3
@@ -19,18 +18,15 @@ jobs:
           python-version: '3.x'
 
       - name: Installer les dépendances
-        run: pip install -r requirements.txt
+        run: pip install requests
 
       - name: Exécuter le script
         run: python update_films.py
 
-      - name: Vérifier les modifications
+      - name: Commit et push
         run: |
           git config --global user.name 'github-actions'
           git config --global user.email 'github-actions@github.com'
           git add films.json
-          if git diff --cached --quiet; then
-            echo "Aucune modification à committer."
-          else
-            git commit -m 'Mise à jour automatique des horaires'
-            git push
+          git commit -m 'Mise à jour automatique des horaires'
+          git push
