--- a/workflows/update-films.yml
+++ b/workflows/update-films.yml
@@ -18,7 +18,7 @@ jobs:
           python-version: '3.x'
 
       - name: Installer les dépendances
-        run: pip install requests python-dateutil
+        run: pip install python-dateutil
 
       - name: Exécuter le script
         run: python update_films.py
