--- a/.github/workflows/run_import-api.yml
+++ b/.github/workflows/run_import-api.yml
@@ -1,17 +1,33 @@
-# .github/workflows/run_import-api.yml
-name: Run import-api.py
+name: Générer films.json
 
 on:
+  push:
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
-  run-script:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python
+      - name: Récupérer le dépôt
+        uses: actions/checkout@v3
+
+      - name: Configurer Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
-      - name: Run script
-        run: python import-api.py
+          python-version: 3.11
+
+      - name: Installer les dépendances Python
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Exécuter import-api.py
+        run: |
+          python import-api.py 2025-09-01 2025-09-30
+
+      - name: Vérifier la génération de films.json
+        run: |
+          ls -l films.json
+          head -n 20 films.json
