--- a/.github/workflows/run_update_films.yml
+++ b/.github/workflows/run_update_films.yml
@@ -5,15 +5,21 @@ on:
   workflow_dispatch:
 
 jobs:
-  run-script:
+  update:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python
+
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '3.x'
+
       - name: Install dependencies
-        run: pip install requests python-dateutil
-      - name: Run script
+        run: pip install -r requirements.txt
+
+      - name: Run update_films.py
+        env:
+          VEEZI_ACCESS_TOKEN: ${{ secrets.VEEZI_ACCESS_TOKEN }}
         run: python update_films.py
