--- a/.github/workflows/update-films.yml
+++ b/.github/workflows/update-films.yml
@@ -34,8 +34,10 @@ jobs:
           echo "==== Fin page.html ===="
 
       - name: Run update_films.py
+        env:
+          VEEZI_ACCESS_TOKEN: ${{ secrets.VEEZI_ACCESS_TOKEN }}
         run: python update_films.py
-
+        
       - name: Commit & push films.json
         run: |
           git config user.name "github-actions[bot]"
