--- a/.github/workflows/update-films.yml
+++ b/.github/workflows/update-films.yml
@@ -6,42 +6,30 @@ on:
   workflow_dispatch:
   schedule:
     - cron: '*/15 * * * *'
+    workflow_dispatch:     # Permet de lancer manuellement
 
 jobs:
-  build:
+  update-films:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout du dépôt
         uses: actions/checkout@v3
-        with:
-          persist-credentials: true
 
-      - name: Setup Python
+      - name: Configurer Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: '3.10'
 
-      - name: Install dependencies
-        run: |
-          pip install --upgrade pip
-          pip install -r requirements.txt
+      - name: Installer les dépendances
+        run: pip install requests arrow
 
-      - name: Download page for debug
-        run: |
-          curl -sL https://stephanemorinqcca-glitch.github.io/cinema-horaire/ > page.html
-          echo "==== Début page.html ===="
-          head -n50 page.html
-          echo "==== Fin page.html ===="
-
-      - name: Run update_films.py
-        env:
-          VEEZI_ACCESS_TOKEN: ${{ secrets.VEEZI_ACCESS_TOKEN }}
+      - name: Exécuter le script
         run: python update_films.py
-        
-      - name: Commit & push films.json
+
+      - name: Commit et push
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
           git add films.json
-          git diff --quiet --cached || git commit -m "chore: mise à jour de films.json"
+          git commit -m "🔄 Mise à jour automatique de films.json"
           git push
