--- a/.github/workflows/update-films.yml
+++ b/.github/workflows/update-films.yml
@@ -1,12 +1,12 @@
 name: Update films.json
+
 permissions:
   contents: write
 
 on:
-  workflow_dispatch:
   schedule:
-    - cron: '*/15 * * * *'
-    workflow_dispatch:     # Permet de lancer manuellement
+    - cron: '*/15 * * * *'  # Toutes les 15 minutes
+  workflow_dispatch:         # Permet de lancer manuellement
 
 jobs:
   update-films:
