--- a/.github/workflows/update-films.yml
+++ b/.github/workflows/update-films.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
+          git add films.json checksumfilms.json
           git add films.json
           git diff --cached --quiet || git commit -m "🔄 Mise à jour automatique de films.json"
           git push
