--- a/.github/workflows/update-films.yml
+++ b/.github/workflows/update-films.yml
@@ -31,5 +31,5 @@ jobs:
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git add films.json checksumfilms.json || true
-          git commit -m "Update films.json" || echo "No changes to commit"
+          git diff --cached --quiet || git commit -m "🔄 Mise à jour automatique de films.json"
           git push
