--- a/.github/workflows/update-films.yml
+++ b/.github/workflows/update-films.yml
@@ -4,8 +4,8 @@ permissions:
   contents: write
 
 on:
-  # schedule:
-   # - cron: '*/5 * * * *'  # Toutes les 5 minutes
+  schedule:
+    - cron: '0 */12 * * *'  # Toutes les 12 heures
   workflow_dispatch:         # Permet de lancer manuellement
 
 jobs:
